# conan-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  hello-world.cpp  hello-world.h.in  hello_world.cpp
cmake/: .gitignore  packaging.cmake
src/: .gitignore  CMakeLists.txt
src/tcp/: .gitignore  client.h
src/util/: .gitignore  CMakeLists.txt  string_util.cpp  string_util.h
